# agentic-model-development-platform

./: ARCHITECTURE.md  PROJECT_STATUS.md  README.md  ROADMAP.md  VISION.md  pyproject.toml
docs/adr/: 0001-use-uv-and-a-src-based-python-package.md
src/amdp/: __init__.py
tests/: test_package.py
